[gd_scene load_steps=5 format=2]

[ext_resource path="res://rpgscripts/CtrlBattleTurnBase.gd" type="Script" id=1]
[ext_resource path="res://prefabs/LBCharacterPawn.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=1]

size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1, 1, 1 )

[node name="Main" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Control" type="Control" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 3.0
margin_right = 76.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Alpha Build"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 350.0
margin_right = 130.0
margin_bottom = 590.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 65.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="BtnAction" type="Button" parent="CanvasLayer/Control/ScrollContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 65.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Actions"
flat = false
align = 1

[node name="BtnMove" type="Button" parent="CanvasLayer/Control/ScrollContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Move"
flat = false
align = 1

[node name="BtnAttack" type="Button" parent="CanvasLayer/Control/ScrollContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 65.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Attack"
flat = false
align = 1

[node name="BtnDefense" type="Button" parent="CanvasLayer/Control/ScrollContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 65.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Defense"
flat = false
align = 1

[node name="BtnSkills" type="Button" parent="CanvasLayer/Control/ScrollContainer/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 65.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Skills"
flat = false
align = 1

[node name="BtnItems" type="Button" parent="CanvasLayer/Control/ScrollContainer/VBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 65.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Items"
flat = false
align = 1

[node name="BtnEnd" type="Button" parent="CanvasLayer/Control/ScrollContainer/VBoxContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 65.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "End"
flat = false
align = 1

[node name="BtnEscape2" type="Button" parent="CanvasLayer/Control/ScrollContainer/VBoxContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 65.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Escape"
flat = false
align = 1

[node name="World" type="Spatial" parent="." index="1"]

[node name="Ground" type="StaticBody" parent="World" index="0"]

editor/display_folded = true
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="World/Ground" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="World/Ground" index="1"]

shape = SubResource( 2 )
disabled = false

[node name="Camera" type="Camera" parent="World" index="1"]

transform = Transform( 1, 0, 0, 0, 0.951737, 0.306914, 0, -0.306914, 0.951737, 0, 5.78223, 7.86763 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0

[node name="Characters" type="Spatial" parent="World" index="2"]

[node name="LBCharacterPawn" parent="World/Characters" index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.55541, 2.90783, 0.476811 )
TeamID = 1.0
IsDead = false
IsEndTurn = false

[node name="LBCharacterPawn2" parent="World/Characters" index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.59109, 2.90783, 0.89618 )
IsDead = false
IsEndTurn = false

[connection signal="pressed" from="CanvasLayer/Control/ScrollContainer/VBoxContainer/BtnAction" to="CanvasLayer/Control" method="_on_BtnAction_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/ScrollContainer/VBoxContainer/BtnMove" to="CanvasLayer/Control" method="_on_BtnMove_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/ScrollContainer/VBoxContainer/BtnAttack" to="CanvasLayer/Control" method="_on_BtnAttack_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/ScrollContainer/VBoxContainer/BtnDefense" to="CanvasLayer/Control" method="_on_BtnDefense_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/ScrollContainer/VBoxContainer/BtnSkills" to="CanvasLayer/Control" method="_on_BtnSkills_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/ScrollContainer/VBoxContainer/BtnItems" to="CanvasLayer/Control" method="_on_BtnItems_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/ScrollContainer/VBoxContainer/BtnEnd" to="CanvasLayer/Control" method="_on_BtnEnd_pressed"]

[connection signal="pressed" from="CanvasLayer/Control/ScrollContainer/VBoxContainer/BtnEscape2" to="CanvasLayer/Control" method="_on_BtnEscape2_pressed"]


